# go_development_env

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanbuildinfo.cmake  conanfile.txt  conaninfo.txt  go_ui.py  install.sh
conf/: logging.conf
scripts/: install.sh
scripts/scoring/: data.py  scoring.py
src/: ai.py  main.py
src/cpp/: main.cpp
src/main/cpp/: main.cpp
src/references/: gym_example.py  qlearn.py
src/scoring/: data.py  go_estimator.c  go_estimator.cpp  go_estimator.h  scoring.py
